wazuh-eks/indexer_stack/wazuh-dashboard/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-dashboard-service
  namespace: wazuh
spec:
  selector:
    app: wazuh-dashboard
  ports:
  - name: http-dashboard
    protocol: TCP
    port: 443
    targetPort: 5601
