wazuh-eks/indexer_stack/wazuh-dashboard/lb-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-external-lb
  namespace: wazuh
  annotations:
    #service.beta.kubernetes.io/aws-load-balancer-type: external
    #service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    #service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
    #domainName: 'soc.siem-marvelad.com'
    #service.beta.kubernetes.io/aws-load-balancer-ssl-cert: 'arn:aws:acm:us-east-1:590183765660:certificate/bd2636cc-66f1-485f-b832-c60d71e58abc'
    #service.beta.kubernetes.io/aws-load-balancer-ssl-ports: '443'
    #service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
    service.beta.kubernetes.io/aws-load-balancer-name: wazuh-external-lb

spec:
  type: LoadBalancer
  ports:
  - name: manager-worker-agents-events
    port: 1514
    targetPort: agents-events
  - name: manager-cluster
    port: 1516
    targetPort: cluster-port
  - name: manager-master-registration
    port: 1515
    targetPort: registration
  - name: manager-master-api
    port: 55000
    targetPort: api-port
  - name: dashboard
    port: 443
    targetPort: dashboard-port
  - name: syslog-messages
    port: 514
    targetPort: syslog-port
  selector:
    lbtype: external
