wazuh-eks/indexer_stack/wazuh-dashboard/dashboard-deploy-ingress.yaml
# Copyright (C) 2019, Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Dashboard Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wazuh-dashboard-80
  namespace: wazuh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-dashboard-80
      lbtype: external
  template:
    metadata:
      labels:
        app: wazuh-dashboard-80
        lbtype: external
      name: wazuh-dashboard-new
    spec:
      volumes:
        - name: config
          configMap:
            name: dashboard-conf
        - name: dashboard-certs
          secret:
            secretName: dashboard-certs
      containers:
        - name: wazuh-dashboard-80
          image: 'wazuh/wazuh-dashboard:4.8.0'
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /usr/share/wazuh-dashboard/config/opensearch_dashboards.yml
              subPath: opensearch_dashboards.yml
              readOnly: false
            - name: dashboard-certs
              mountPath: /usr/share/wazuh-dashboard/certs/cert.pem
              readOnly: true
              subPath: cert.pem
            - name: dashboard-certs
              mountPath: /usr/share/wazuh-dashboard/certs/key.pem
              readOnly: true
              subPath: key.pem
            - name: dashboard-certs
              mountPath: /usr/share/wazuh-dashboard/certs/root-ca.pem
              subPath: root-ca.pem
              readOnly: true
          ports:
            - containerPort: 80
              name: dashboard-port
---
apiVersion: v1
kind: Service
metadata:
  namespace: wazuh
  name: wazuh-dashboard-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: wazuh-dashboard-80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wazuh
  name: wazuh-dashboard-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: "subnet-05fbf4a6250fa2324, subnet-0c3fca6bec1072d2a"

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wazuh-dashboard-service
              port:
                number: 80
