wazuh-eks/indexer_stack/wazuh-dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-ingress-dashboard
  #annotations:
  #  kubernetes.io/ingress.class: "alb"
  #  service.beta.kubernetes.io/aws-load-balancer-tls-cert: "arn:aws:acm:us-east-1:590183765660:certificate/e698d632-0d24-43d4-80f3-5c597af5f094"
spec:
  ingressClassName: alb
  rules:
    - host: dashboard.siem-marvelad.com
      http:
        paths:
          - path: / # ¡Con la barra al final!
            pathType: Prefix
            backend:
              service:
                name: wazuh-dashboard-service
                port:
                  number: 5601
