wazuh-eks/indexer_stack/wazuh-dashboard/dashboard-service-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: wazuh
  name: wazuh-dashboard-service
spec:
  ports:
    - port: 5601
      targetPort: 5601
      protocol: TCP
  type: NodePort
  selector:
    app: wazuh-dashboard
    lbtype: external
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wazuh
  name: wazuh-ingress-dashboard
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: "subnet-05fbf4a6250fa2324, subnet-0c3fca6bec1072d2a"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:590183765660:certificate/8eb461ce-9adb-481e-a487-a799e7d6e9f6
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wazuh-dashboard-service
              port:
                number: 5601
  tls:
    - hosts:
      - alb.siem-marvelad.com
      secretName: tls-secret
